--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,13 @@
     android:fitsSystemWindows="true"
     android:background="#ffffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="de.fh_zwickau.WIKWay.MainActivity"
+    tools:context="de.fh_zwickau.WIKWay.activities.MainActivity"
     tools:openDrawer="start">
 
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-    </ListView>
+        android:layout_height="wrap_content"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
