--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="100dp"
@@ -11,6 +11,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
         android:contentDescription="@string/todo" />
 
     <LinearLayout
@@ -19,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_toRightOf="@id/imageView"
         android:layout_marginStart="10dp">
         <TextView
             android:id="@+id/name"
@@ -36,6 +39,17 @@
             android:layout_height="wrap_content"
             android:paddingBottom="2dip"
             android:textColor="@color/colorAccent" />
-
     </LinearLayout>
-</LinearLayout>
+
+    <Button
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_favorite"
+        android:focusable="false"
+        android:background="#ffffff"
+        android:drawableStart="@drawable/ic_favorite_black_24dp"
+        android:drawableLeft="@drawable/ic_favorite_black_24dp"/>
+</RelativeLayout>
